# python-template

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  DEVELPMENT.md  README.md  SETUP.md  pyproject.toml
.github/: labeler.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: labeler.yml  latest-changes.yml  lint-backend.yml  smokeshow.yml  test.yml
scripts/: lint.sh
tests/: test_example.py
